[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cenas/memoria/memoria.gd" type="Script" id=1]
[ext_resource path="res://Imagens/hand.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="memoria" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="cartas" type="Node2D" parent="."]

[node name="cursor" type="Area2D" parent="."]
position = Vector2( -151, -121 )
collision_layer = 0
collision_mask = 8

[node name="sprite" type="Sprite" parent="cursor"]
rotation = -0.785397
scale = Vector2( 0.66, 0.66 )
texture = ExtResource( 2 )
offset = Vector2( 25, 75 )

[node name="shape" type="CollisionShape2D" parent="cursor"]
shape = SubResource( 1 )

[connection signal="flipped" from="." to="." method="_on_memoria_flipped"]
[connection signal="mactch" from="." to="." method="_on_memoria_mactch"]
[connection signal="miss" from="." to="." method="_on_memoria_miss"]
[connection signal="selected" from="." to="." method="_on_memoria_selected"]
[connection signal="area_entered" from="cursor" to="." method="_on_cursor_area_entered"]
